@@ -1,6 +1,8 @@
 <pre>
 2007-xx-xx:
 	* version 0.6
+	* commandline history now works properly on Windows
+	* filename completion now works on Windows
 	* Fixed search for :open (previously needed to do :o <tab> ONCE to initialize them)
 	* added :set {option}! support to toggle a boolean option's value
 	* added :set all and :set all& support to show the current value of all
